--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,50 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <title>STYLE WATCH</title>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link rel="stylesheet" href="./css/_main.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <!-- Іванна Курач -->
+    <load src="./partials/header.html" />
 
     <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+      <!-- Михайло Пилипів -->
+      <load src="./partials/hero.html" />
+
+      <!-- Ганна Пономаренко -->
+      <load src="./partials/about.html" />
+
+      <!-- Марина Таран -->
+      <load src="./partials/catalog.html" />
+
+      <!-- Anna Taranova -->
+      <load src="./partials/advertisement.html" />
+
+      <!-- Владислав Кузьменко -->
+      <load src="./partials/sale.html" />
+
+      <!--Назарій Веретюк-->
+      <load src="./partials/revievs.html" />
+
+      <!-- Ілля Черниш -->
+      <load src="./partials/contact.html" />
     </main>
 
+    <!-- Тарас Перерва -->
     <load src="./partials/footer.html" />
+
+    <!-- Іванна Курач -->
+    <load src="./partials/mobile-menu.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
