--- a/src/index.html
+++ b/src/index.html
@@ -17,38 +17,28 @@
     <link rel="stylesheet" href="./css/_main.css" />
   </head>
   <body>
-    <!-- Іванна Курач -->
-    <load src="./partials/header.html" />
+    <header>
+      <load src="partials/header.html" />
+    </header>
 
     <main>
-      <!-- Михайло Пилипів -->
-      <load src="./partials/hero.html" />
-
-      <!-- Ганна Пономаренко -->
-      <load src="./partials/about.html" />
-
-      <!-- Марина Таран -->
-      <load src="./partials/catalog.html" />
-
-      <!-- Anna Taranova -->
-      <load src="./partials/advertisement.html" />
-
-      <!-- Владислав Кузьменко -->
-      <load src="./partials/sale.html" />
-
-      <!--Назарій Веретюк-->
-      <load src="./partials/revievs.html" />
-
-      <!-- Ілля Черниш -->
-      <load src="./partials/contact.html" />
+      <load src="partials/hero.html" />
+      <load src="partials/about.html" />
+      <load src="partials/catalog.html" />
+      <load src="partials/advertisement.html" />
+      <load src="partials/sale.html" />
+      <load src="partials/reviews.html" />
+      <load src="partials/contact-us.html" />
     </main>
 
-    <!-- Тарас Перерва -->
-    <load src="./partials/footer.html" />
+    <footer>
+      <load src="partials/footer.html" />
+    </footer>
 
-    <!-- Іванна Курач -->
-    <load src="./partials/mobile-menu.html" />
+    <load src="partials/mob-menu.html" />
 
-    <script type="module" src="./main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script></script>
+    <script defer type="module" src="./main.js"></script>
   </body>
 </html>
